--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@mantine/core": "^7.3.1",
+    "@mantine/form": "^7.3.1",
+    "@mantine/notifications": "^7.3.1",
+    "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "next": "14.0.4",
     "nodemon": "^3.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "redis": "^4.6.11"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
